internationilization is updated

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
 #          ddl-auto: update
   liquibase:
      change-log: classpath:liquibase/1.0/changelog-4.sql
-
+  mvc:
+    static-path-pattern: /content/**
 
 
 
