--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     implementation 'org.liquibase:liquibase-core:4.21.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.0'
+
 }
 
 tasks.named('test') {
